# dv-regression-lab

./: .env.example  .gitignore  ARCHIVE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: blueprint.json
docs/: cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  enterprise-readiness.md  monetization-playbook.md  quality-gate.md  revenue-growth-model.md  reviewer-evidence-map.md
docs/architecture/: blueprint.json
dv_regression_lab/: __init__.py  ai_triage.py  analytics.py  api.py  cli.py  dashboard.py  models.py  orchestrator.py  simulator.py  store.py  taxonomy.py
examples/: power_intent_nightly.yaml  rtl_smoke_iverilog.yaml  soc_smoke.yaml
rtl/: irq_router.sv
tb/: tb_irq_router_negative.sv  tb_irq_router_smoke.sv
tests/: test_ai_triage.py  test_analytics.py  test_api.py  test_iverilog_adapter.py  test_orchestrator.py  test_taxonomy.py
